--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start--single-run", 
+    "test": "karma start--single-run",
     "test-dev": "karma start",
     "teste-jasmine": "jasmine"
   },
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^3.4.1",
     "browserify": "^17.0.0",
     "jasmine": "^4.5.0",
     "karma": "^6.4.1",
